--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -49,20 +49,19 @@ set -g @plugin 'christoomey/vim-tmux-navigator' # for navigating panes and vim/n
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
 
-# THEME THEME THEME
-set -g @plugin 'Nybkox/tmux-kanagawa'
-# it can accept `hostname` (full hostname), `session`, `shortname` (short name), `smiley`, `window`, or any character. 
-set -g @kanagawa-show-left-icon session
-set -g @dracula-show-powerline true
-# available plugins: battery, cpu-usage, git, gpu-usage, ram-usage, tmux-ram-usage, network, network-bandwidth, network-ping, 
-# ssh-session, attached-clients, network-vpn, weather, time, mpc, spotify-tui, kubernetes-context, synchronize-panes
-set -g @kanagawa-plugins "cpu-usage ram-usage"
-# available colors: white, gray, dark_gray, light_purple, dark_purple, cyan, green, orange, red, pink, yellow
-# set -g @kanagawa-[plugin-name]-colors "[background] [foreground]"
-set -g @kanagawa-cpu-usage-colors "light_purple white"
-set -g @kanagawa-ram-usage-colors "light_purple white"
-set -g @kanagawa-ram-usage-label "⎸    RAM"
+# Let's try this theme
+set -g @plugin '2kabhishek/tmux2k'
+set -g @tmux2k-theme 'duo'
 
+# set start icon, accpets: `session`, 'window`, or any string
+set -g @tmux2k-start-icon session
+
+set -g @tmux2k-duo-bg "black"
+
+set -g @tmux2k-right-plugins "cpu ram"
+set -g @tmux2k-left-plugins "null"
+
+# Other useful plugins
 set -g @resurrect-capture-pane-contents 'on' # allow tmux-ressurect to capture pane contents
 set -g @continuum-restore 'on' # enable tmux-continuum functionality
 
